quricol/quricol.h

void WINAPI GeneratePNGW(LPWSTR fileName, LPWSTR text, int margin, int size, int level);
#define GeneratePNG  GeneratePNGW
#define GeneratePNG  GeneratePNGA
HBITMAP WINAPI GetHBitmapW(LPWSTR text, int margin, int size, int level);
#define GetHBitmap  GetHBitmapW
#define GetHBitmap  GetHBitmapA
void WINAPI GenerateBMPW(LPWSTR fileName, LPWSTR text, int margin, int size, int level);
#define GenerateBMP  GenerateBMPW
#define GenerateBMP  GenerateBMPA
void WINAPI GetPNGW(LPWSTR text, int margin, int size, int level, LPINT bufSize, __deref_opt_out void **ppvBits);
#define GetPNG  GetPNGW
#define GetPNG  GetPNGA
void WINAPI DestroyBuffer(void* buffer);
COLORREF WINAPI GetBackgroundColor(void);
COLORREF WINAPI GetForegroundColor(void);
void WINAPI SetBackgroundColor(COLORREF value);
void WINAPI SetForegroundColor(COLORREF value);